--- a/Posts/templates/posts/base.html
+++ b/Posts/templates/posts/base.html
@@ -59,10 +59,11 @@
                     </li>
                     <li>
                         <li>
-                            <!-- {% for p in data %} -->
+                           
                             {{data}}
-                            <!-- {%endfor%} -->
-                            <a href="">voice</a>
+                       
+                            <!-- <a href="">voice</a> -->
+<button onclick="location.href='{% url 'extenal' %}'">click</button> 
                         </li>
                         <li>
 
