--- a/Posts/templates/posts/about.html
+++ b/Posts/templates/posts/about.html
@@ -50,6 +50,9 @@
                     <li>
                         <a href="{% url 'contact' %}">Contact</a>
                     </li>
+                    <li>
+                        <a href="{% url 'register' %}">Register</a>
+                    </li>
                 </ul>
             </div>
             <!-- /.navbar-collapse -->
