--- a/Posts/templates/posts/register.html
+++ b/Posts/templates/posts/register.html
@@ -3,7 +3,7 @@
     
     <head>
         {% load static%}
-        {% csrf_token %}
+     
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -51,6 +51,9 @@
                     <li>
                         <a href="{% url 'contact' %}">Contact</a>
                     </li>
+                    <li>
+                        <a href="{% url 'register' %}">Register</a>
+                    </li>
                 </ul>
             </div>
             <!-- /.navbar-collapse -->
@@ -80,49 +83,12 @@
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
                 <p>Fill the form to post.</p>
-                <form action="register" method="POST" novalidate>
-                    <div class="row control-group">
-                        <div class="form-group col-xs-12 floating-label-form-group controls">
-                            <label>First Name</label>
-                    <input type="text" class="form-control" placeholder="First Name" id="first_Name" required data-validation-required-message="Please enter your First Name.">
-                            <p class="help-block text-danger"></p>
-                        </div>
-                    </div>
-                    <div class="row control-group">
-                        <div class="form-group col-xs-12 floating-label-form-group controls">
-                            <label>Last Name</label>
-                    <input type="text" class="form-control" placeholder="Last Name" id="last_Name" required data-validation-required-message="Please enter your Last Name.">
-                            <p class="help-block text-danger"></p>
-                        </div>
-                    </div>
-                    <div class="row control-group">
-                        <div class="form-group col-xs-12 floating-label-form-group controls">
-                            <label>Username</label>
-                            <input type="text" class="form-control" placeholder="username" id="username" required data-validation-required-message="Please enter your Username.">
-                            <p class="help-block text-danger"></p>
-                        </div>
-                    </div>
-                    <div class="row control-group">
-                        <div class="form-group col-xs-12 floating-label-form-group controls">
-                            <label>Email Address</label>
-                            <input type="email" class="form-control" placeholder="Email Address" id="email" required data-validation-required-message="Please enter your email address.">
-                            <p class="help-block text-danger"></p>
-                        </div>
-                    </div>
-                    <div class="row control-group">
-                        <div class="form-group col-xs-12 floating-label-form-group controls">
-                            <label>Password</label>
-                            <input type="password" class="form-control" placeholder="Password" id="password1" required data-validation-required-message="Please enter your Password.">
-                            <p class="help-block text-danger"></p>
-                        </div>
-                    </div>    
-                    <div class="row control-group">
-                        <div class="form-group col-xs-12 floating-label-form-group controls">
-                            <label>Password</label>
-                            <input type="password" class="form-control" placeholder="Password" id="password2" required data-validation-required-message="Please enter your Password.">
-                            <p class="help-block text-danger"></p>
-                        </div>
-                    </div>           
+
+                <form  method="POST" >
+                    {% csrf_token %}
+
+                    {{form.as_p}}
+
                     <br>
                     <div id="success"></div>
                     <div class="row">
